--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,6 +20,7 @@
 
 h1{
   text-align: center;
+  margin-bottom: 1em;
 }
 
 .form,
@@ -61,4 +62,70 @@ h1{
 
 .form-control input {
   padding: 5px;
+}
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 10px;
+}
+
+.container .item{
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  flex: 1 1 29%;
+  max-width: 29%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.item h2,
+.item p {
+  margin-bottom:.8em;
+}
+
+.actions{
+  display: flex;
+  justify-content: space-between;
+}
+
+.actions a,
+.actions input {
+  border: 1px solid #BBB;
+  border-radius: 5px;
+  text-decoration: none;
+  background-color: #FFF;
+  padding: 5px;
+  font-size: 15px;
+  color: #000;
+  cursor: pointer;
+}
+
+.actions .detals-btn{
+  border-color: #004085;
+  color: #004085;
+}
+
+.actions .delete-btn{
+  border-color: #721c24;
+  color: #721c24;
+}
+
+.address-container {
+  max-width: 1000px;
+  margin: 1em auto;
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
+}
+
+.address-container h2 {
+  margin-bottom: 1em;
+}
+
+.address-container form {
+  width: 300px;
 }
