--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,6 +120,7 @@ h1{
   margin: 1em auto;
   padding-top: 1em;
   border-top: 1px solid #ccc;
+  padding-bottom: 200px;
 }
 
 .address-container h2 {
@@ -128,4 +129,10 @@ h1{
 
 .address-container form {
   width: 300px;
+}
+
+.address-list {
+  margin-top: 1em;
+  padding-top: 1em;
+  border-top: 1px #ccc;
 }
