--- a/views/useredit.handlebars
+++ b/views/useredit.handlebars
@@ -36,6 +36,11 @@
       <input type="text" name="city" placeholder="Digite a cidade">
     </div>
     <input type="submit" value="incluir endereço">
-
   </form>
+  <div class="address-list">
+    <h2>Lista de endereços:</h2>
+    {{#each user.Addresses}}
+      <p>#{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
+    {{/each}}
+  </div>
 </div>
